update README dan demo

--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+    <h1>API Static - Lokasi Indonesia 2023</h1>
+    <hr>
     <select id="provinsi-select"></select>
     <select id="kabupaten-select"></select>
     <select id="kecamatan-select"></select>
